Bug 414537 - Unfavorable placement of UI-specific settings
Summary: Unfavorable placement of UI-specific settings
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.29.3 (KDE Applications 19.08.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-26 14:28 UTC by Ralf Habacker
Modified: 2020-03-02 07:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.80 (KDE releases 20.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-26 14:28:07 UTC
On the main page of the configuration dialog in the section "Miscellaneous" there are two options ("Create new association line as" and "Use angular association lines"), which are user interface specific and should better be included on the page "User Interface", because there are already corresponding groups, e.g. "Colors". 

STEPS TO REPRODUCE
1. start umbrello
2. open setting dialog
3. inspect miscellaneous section
4. switch to page "User interface"

OBSERVED RESULT
In 3. there are the mentioned settings, which belongs to the user interface"

EXPECTED RESULT
The mentioned settings in 3. should be moved to the "user interface" page


SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.55
Qt Version: 5.9
Comment 1 Ralf Habacker 2019-11-26 14:35:19 UTC
Git commit 78b095b48e4645f4ffae817fff2a0341efb932d0 by Ralf Habacker.
Committed on 26/11/2019 at 14:30.
Pushed by habacker into branch 'master'.

Move association specific user interface options to ui page of settings dialog

Move code for selecting association line layout type from general option page
into a separate class named SelectLayoutTypeWidget and add it to new ui page
group "Associations".

Move angular line option to ui options page from generic page.

This commit also adds the ComboBoxWidgetBase class, which can be used as
a base class for combo box related dialog widgets and helps to avoid
duplicated code.
FIXED-IN:2.30.80 (KDE Applications 20.03.80)

M  +2    -0    umbrello/CMakeLists.txt
M  +1    -30   umbrello/dialogs/pages/generaloptionpage.cpp
M  +3    -3    umbrello/dialogs/pages/generaloptionpage.h
M  +18   -0    umbrello/dialogs/pages/uioptionspage.cpp
M  +4    -0    umbrello/dialogs/pages/uioptionspage.h
A  +45   -0    umbrello/dialogs/widgets/comboboxwidgetbase.cpp     [License: GPL (v2+)]
A  +32   -0    umbrello/dialogs/widgets/comboboxwidgetbase.h     [License: GPL (v2+)]
A  +35   -0    umbrello/dialogs/widgets/selectlayouttypewidget.cpp     [License: GPL (v2+)]
A  +27   -0    umbrello/dialogs/widgets/selectlayouttypewidget.h     [License: GPL (v2+)]

https://invent.kde.org/kde/umbrello/commit/78b095b48e4645f4ffae817fff2a0341efb932d0
Comment 2 Ralf Habacker 2019-11-26 15:05:38 UTC
Git commit f0b38d1051fcf684fc4d4fae59e2b43b7ae083d7 by Ralf Habacker.
Committed on 26/11/2019 at 15:05.
Pushed by habacker into branch 'master'.

Use current settings object instead of the global one

M  +1    -1    umbrello/dialogs/pages/uioptionspage.cpp

https://invent.kde.org/kde/umbrello/commit/f0b38d1051fcf684fc4d4fae59e2b43b7ae083d7