Move association specific user interface options to ui page of settings dialog

Move code for selecting association line layout type from general option page
into a separate class named SelectLayoutTypeWidget and add it to new ui page
group "Associations".

Move angular line option to ui options page from generic page.

This commit also adds the ComboBoxWidgetBase class, which can be used as
a base class for combo box related dialog widgets and helps to avoid
duplicated code.

BUG:414537
FIXED-IN:2.30.80 (KDE Applications 20.03.80)